# uncle-ron

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  build.gradle.kts  docker-compose.yml  pyproject.toml  settings.gradle.kts  startup.sh
.githooks/: post-checkout
.github/: docker-publish.yml
alembic/: env.py
alembic/versions/: ea3c3f5c41ce_ensure_temperature_and_max_tokens_.py  f045f57e416b_add_temperature_and_max_tokens_columns_.py
app/: constants.py  database.py  main.py
app/cogs/: ai.py  fun.py  info.py  links.py  qotd.py  settings.py  slaps.py  stocks.py  twitter.py
app/config/: __init__.py  app_settings.py
app/models/: ai.py  database.py  links.py  qotd.py  settings.py  slaps.py
app/utils/: __init__.py  check_utils.py  embed_builder.py  interaction_utils.py  logger.py  poll_builder.py
app/utils/ai/: providers.py  tools.py
app/views/: paginated.py
gradle/wrapper/: gradle-wrapper.properties
src/main/kotlin/: Constants.kt  Main.kt
src/main/kotlin/commands/main/fun/: Ask.kt
src/main/kotlin/commands/main/info/: Info.kt
src/main/kotlin/commands/main/misc/: Leetify.kt  Ping.kt  Search.kt
src/main/kotlin/commands/main/money/: Crypto.kt  Economy.kt  (+1 more)
src/main/kotlin/ext/: Rand.kt
src/main/kotlin/handler/: Command.kt  Config.kt  TwitterLinkConverter.kt
src/main/kotlin/internal/command/: AbstractCommand.kt  Command.kt  CommandEvent.kt  CommandOptionData.kt  SubCommand.kt
src/main/kotlin/internal/misc/: Emoji.kt  Pagable.kt
src/main/kotlin/internal/security/: Security.kt
src/main/resources/: logback.xml
(+6 files in other folders)
